Day-24-NetworkSecurity/advanced-zero-trust/7-default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: default
spec:
  podSelector: {} 
  policyTypes:
  - Ingress
